[[bin]]
name = 'node-template'
path = 'src/main.rs'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2021'
name = 'node-template'
version = '2.0.0'

[build-dependencies]
vergen = { version = "3.0.4", default-features = false }

[dependencies]
derive_more = "0.99.17"
exit-future = "0.2.0"
futures = "0.3.25"
log = '0.4.8'
parking_lot = "0.12.1"
tokio = "1.21.2"
trie-root = "0.17.0"

pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#pallet-contracts-primitives = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"] , branch = "polkadot-v0.9.28" }

pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }


sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.28" }

#[dependencies.network]
#git = 'https://github.com/paritytech/substrate.git'
#package = 'substrate-network'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.node-template-runtime]
path = 'runtime'

[profile.release]
panic = "unwind"

#[dependencies.primitives]
#git = 'https://github.com/paritytech/substrate.git'
#package = 'substrate-primitives'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

#[dependencies.sr-io]
#git = 'https://github.com/paritytech/substrate.git'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'


#[dependencies.substrate-client]
#git = 'https://github.com/paritytech/substrate.git'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.substrate-executor]
#git = 'https://github.com/paritytech/substrate.git'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.substrate-service]
#git = 'https://github.com/paritytech/substrate.git'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'


[workspace]
members = ['runtime']

#[features]
#default = ["std"]
#std = [
#    "codec/std",
#    "frame-system/std",
#    "frame-try-runtime/std",
#    "pallet-aura/std",
#    "pallet-sudo/std",
#    "pallet-grandpa/std",
#    "pallet-contracts/std",
#    "pallet-contracts-primitives/std",
#    "sp-core/std",
#    "sp-std/std",
#    "sp-transaction-pool/std",
#    "sp-consensus-aura/std",
#]
