[package]
authors = ['Anonymous']
edition = '2021'
name = 'node-template-runtime'
version = '2.0.0'
[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'pallet-balances/std',
    'pallet-aura/std',
    'pallet-grandpa/std',
    'frame-executive/std',
    'pallet-indices/std',
    'pallet-randomness-collective-flip/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-sudo/std',
    'pallet-transaction-payment/std',
    "sp-api/std",
    "sp-block-builder/std",
    'sp-version/std',
    'scale-info/std',
    'sp-core/std',
    'sp-consensus-aura/std',
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-transaction-pool/std",
    'serde',

]

[dependencies]
pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-indices = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#pallet-contracts-primitives = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }


frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.28" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
getrandom = {version = "0.2", default-features = false, features=["custom"]}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }




#[dependencies.indices]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-indices'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

#[dependencies.offchain-primitives]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'substrate-offchain-primitives'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.primitives]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'substrate-primitives'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

#[dependencies.randomness-collective-flip]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-randomness-collective-flip'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.rstd]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'sr-std'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.runtime-io]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'sr-io'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

#[dependencies.safe-mix]
#default-features = false
#version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

#[dependencies.sr-primitives]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.substrate-session]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.sudo]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-sudo'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.support]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-support'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.system]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-system'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.timestamp]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-timestamp'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'

#[dependencies.transaction-payment]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'srml-transaction-payment'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
#
#[dependencies.version]
#default_features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'sr-version'
#rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
